--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "start": "ng serve",
+    "start:practica": "ng serve practica -o --port 4901",
+    "e2e:practica": "ng e2e practica-e2e --watch",
+    "test:lib-home": "ng test core-feature-home --watch --verbose",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -28,17 +29,49 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "^10.1.0",
+    "@angular/common": "^10.1.0",
+    "@angular/compiler": "^10.1.0",
+    "@angular/core": "^10.1.0",
+    "@angular/forms": "^10.1.0",
+    "@angular/localize": "^10.2.0",
+    "@angular/platform-browser": "^10.1.0",
+    "@angular/platform-browser-dynamic": "^10.1.0",
+    "@angular/router": "^10.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ngrx/effects": "^10.0.1",
+    "@ngrx/router-store": "^10.0.1",
+    "@ngrx/store": "^10.0.1",
+    "@ngrx/store-devtools": "^10.0.1",
+    "@ngx-loading-bar/core": "^5.1.0",
+    "@ngx-loading-bar/router": "^5.1.0",
+    "@nrwl/angular": "^10.3.0",
+    "ngx-loading": "^8.0.0",
+    "rxjs": "~6.5.5",
+    "zone.js": "^0.10.2"
+  },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.1001.4",
     "@angular/cli": "~10.1.3",
+    "@angular/compiler-cli": "^10.1.0",
+    "@angular/language-service": "^10.1.0",
     "@nrwl/cli": "10.3.0",
+    "@nrwl/cypress": "10.3.0",
+    "@nrwl/jest": "10.3.0",
     "@nrwl/workspace": "10.3.0",
+    "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "^4.1.0",
     "dotenv": "6.2.0",
+    "eslint": "7.10.0",
+    "jest": "26.2.2",
+    "jest-preset-angular": "8.3.1",
+    "prettier": "2.0.4",
+    "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "eslint": "7.10.0",
-    "typescript": "~4.0.3",
-    "prettier": "2.0.4"
+    "typescript": "~4.0.3"
   }
 }
