--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
